--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.3.1",
+    "react-floating-whatsapp": "^5.0.8",
     "react-google-autocomplete": "^2.7.3",
     "react-router-dom": "^6.22.3"
   },
