--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-floating-whatsapp": "^5.0.8",
     "react-google-autocomplete": "^2.7.3",
+    "react-hook-form": "^7.55.0",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
